--- a/TestPatcher/ItemTagger.csproj
+++ b/TestPatcher/ItemTagger.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Mutagen.Bethesda" Version="0.37.1" />
+    <PackageReference Include="Mutagen.Bethesda.FormKeys.Fallout4" Version="3.0.0" />
     <PackageReference Include="Mutagen.Bethesda.Synthesis" Version="0.23.1-pr001" />
   </ItemGroup>
 </Project>
