--- a/ItemTypeFinder/ItemTypeFinder.csproj
+++ b/ItemTypeFinder/ItemTypeFinder.csproj
@@ -1,11 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-    <TargetPlatformIdentifier>Windows</TargetPlatformIdentifier>
-    <ImplicitUsings>true</ImplicitUsings>
-  </PropertyGroup>
 
+  <PropertyGroup>
+    <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Mutagen.Bethesda" Version="0.38.2" />
@@ -13,8 +12,4 @@
     <PackageReference Include="Mutagen.Bethesda.Synthesis" Version="0.23.3" />
   </ItemGroup>
 
-
-  <ItemGroup>
-    <ProjectReference Include="..\ItemTypeFinder\ItemTypeFinder.csproj" />
-  </ItemGroup>
 </Project>
