--- a/ItemTagger/ItemTagger.csproj
+++ b/ItemTagger/ItemTagger.csproj
@@ -8,8 +8,8 @@
 
 
   <ItemGroup>
-    <PackageReference Include="Mutagen.Bethesda" Version="0.39.4-pr001" />
+    <PackageReference Include="Mutagen.Bethesda" Version="0.40.0" />
     <PackageReference Include="Mutagen.Bethesda.FormKeys.Fallout4" Version="3.0.0" />
-    <PackageReference Include="Mutagen.Bethesda.Synthesis" Version="0.24.0-pr001" />
+    <PackageReference Include="Mutagen.Bethesda.Synthesis" Version="0.25.2" />
   </ItemGroup>
 </Project>
